--- a/equipe.html
+++ b/equipe.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/equipe.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
     <title>Equipe</title>
 </head>
@@ -21,8 +22,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo if branco.png" width="" height="30" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -43,119 +43,75 @@
     </header>
     <main class="main container">
         <h1 class="title text-center">Equipe</h1>
-        <div class="row">
-            <div class=".col-xs-6 .col-sm-3">
-                <div class="card p-0">
-                    <div class="card-image">
-                        <img src="assets/img/amanda.jfif" alt="">
-                    </div>
-                    <div class="card-content d-flex flex-column align-items-center">
-                        <h4 class="pt-2">Amanda</h4>
-                        <h5>Dev e Designer</h5>
-                        <ul class="social-icons d-flex justify-content-center">
-                            <li style="--i:1">
-                                <a href="#">
-                                    <span class="fab fa-facebook"></span>
-                                </a>
-                            </li>
-                            <li style="--i:2">
-                                <a href="#">
-                                    <span class="fab fa-twitter"></span>
-                                </a>
-                            </li>
-                            <li style="--i:3">
-                                <a href="#">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-                            </li>
-                        </ul>
+        <div class="row pb-5 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <!-- Card-->
+                <div class="card shadow-sm border-0 rounded">
+                    <div class="card-body p-0"><img src="assets/img/amanda.jfif" alt="" class="w-100 card-img-top">
+                        <div class="p-4">
+                            <h5 class="mb-0">Amanda</h5>
+                            <p class="small text-muted">Front-End / Back-End</p>
+                            <ul class="social mb-0 list-inline mt-3">
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class=".col-xs-6 .col-sm-3">
-                <div class="card p-0">
-                    <div class="card-image">
-                        <img src="assets/img/dayane.jpg" alt="">
-                    </div>
-                    <div class="card-content d-flex flex-column align-items-center">
-                        <h4 class="pt-2">Dayane</h4>
-                        <h5>Dev e Designer</h5>
 
-                        <ul class="social-icons d-flex justify-content-center">
-                            <li style="--i:1">
-                                <a href="#">
-                                    <span class="fab fa-facebook"></span>
-                                </a>
-                            </li>
-                            <li style="--i:2">
-                                <a href="#">
-                                    <span class="fab fa-twitter"></span>
-                                </a>
-                            </li>
-                            <li style="--i:3">
-                                <a href="#">
-                                    <span class="fab fa-instagram"></span>
-                                </a>
-                            </li>
-                        </ul>
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <!-- Card-->
+                <div class="card shadow-sm border-0 rounded">
+                    <div class="card-body p-0"><img src="assets/img/dayane.jpg" alt="" class="w-100 card-img-top">
+                        <div class="p-4">
+                            <h5 class="mb-0">Dayane</h5>
+                            <p class="small text-muted">Back-End</p>
+                            <ul class="social mb-0 list-inline mt-3">
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class=".col-xs-6 .col-sm-3">
-                <div class="card p-0">
-                    <div class="card-image">
-                        <img src="assets/img/deyvison.jfif" alt="">
-                    </div>
-                    <div class="card-content d-flex flex-column align-items-center">
-                        <h4 class="pt-2">Deyvison</h4>
-                        <h5>Dev e Designer</h5>
 
-                        <ul class="social-icons d-flex justify-content-center">
-                            <li style="--i:1">
-                                <a href="#">
-                                    <span class="fab fa-facebook"></span>
-                                </a>
-                            </li>
-                            <li style="--i:2">
-                                <a href="#">
-                                    <span class="fab fa-twitter"></span>
-                                </a>
-                            </li>
-                            <li style="--i:3">
-                                <a href="#">
-                                    <span class="fab fa-instagram"></span>
-                                </a>
-                            </li>
-                        </ul>
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <!-- Card-->
+                <div class="card shadow-sm border-0 rounded">
+                    <div class="card-body p-0"><img src="assets/img/deyvison.jfif" alt="" class="w-100 card-img-top">
+                        <div class="p-4">
+                            <h5 class="mb-0">Deyvison</h5>
+                            <p class="small text-muted">Back-End</p>
+                            <ul class="social mb-0 list-inline mt-3">
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class=".col-xs-6 .col-sm-3">
-                <div class="card p-0">
-                    <div class="card-image">
-                        <img src="assets/img/nanda.jfif" alt="">
-                    </div>
-                    <div class="card-content d-flex flex-column align-items-center">
-                        <h4 class="pt-2">Maria Fernanda</h4>
-                        <h5>Dev e Designer</h5>
 
-                        <ul class="social-icons d-flex justify-content-center">
-                            <li style="--i:1">
-                                <a href="#">
-                                    <i class="fa-brands fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li style="--i:2">
-                                <a href="#">
-                                    <span class="fab fa-twitter"></span>
-                                </a>
-                            </li>
-                            <li style="--i:3">
-                                <a href="#">
-                                    <span class="fa-brands fa-instagram"></span>
-                                </a>
-                            </li>
-                        </ul>
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <!-- Card-->
+                <div class="card shadow-sm border-0 rounded">
+                    <div class="card-body p-0"><img src="assets/img/nanda.jfif" alt="" class="w-100 card-img-top">
+                        <div class="p-4">
+                            <h5 class="mb-0">Maria Fernanda</h5>
+                            <p class="small text-muted">Back-End</p>
+                            <ul class="social mb-0 list-inline mt-3">
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+                                <li class="list-inline-item m-0"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -166,6 +122,11 @@
             <p class="text-center">&copy; Todos os direitos reservados</p>
         </div>
     </footer>
+
+    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
+
 </body>
 
 </html>
