--- a/calculo.html
+++ b/calculo.html
@@ -21,8 +21,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo if branco.png" width="" height="30" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -43,47 +42,48 @@
     </header>
     <main class="main container">
         <h1 class="title text-center">Calculo</h1>
-        <label for="decimal">Digite um valor decimal:</label>
-        <input type="text" id="decimal" name="decimal"><br><br>
-        <button
-            onclick="document.getElementById('binario').textContent = decimalParaBinario(document.getElementById('decimal').value)">Converter
-            para binário</button>
-        <p>O valor em binário é: <span id="binario"></span></p><br><br>
-
-        <label for="binario2">Digite um valor binário:</label>
-        <input type="text" id="binario2" name="binario"><br><br>
-        <button
-            onclick="document.getElementById('decimal2').textContent = binarioParaDecimal(document.getElementById('binario2').value)">Converter
-            para decimal</button>
-        <p>O valor em decimal é: <span id="decimal2"></span></p><br><br>
-
-        <label for="decimal3">Digite um valor decimal:</label>
-        <input type="text" id="decimal3" name="decimal3"><br><br>
-        <button
-            onclick="document.getElementById('hexadecimal').textContent = decimalParaHexadecimal(document.getElementById('decimal3').value)">Converter
-            para hexadecimal</button>
-        <p>O valor em hexadecimal é: <span id="hexadecimal"></span></p><br><br>
-
-        <label for="hexadecimal2">Digite um valor hexadecimal:</label>
-        <input type="text" id="hexadecimal2" name="hexadecimal2"><br><br>
-        <button
-            onclick="document.getElementById('decimal4').textContent = hexadecimalParaDecimal(document.getElementById('hexadecimal2').value)">Converter
-            para decimal</button>
-        <p>O valor em decimal é: <span id="decimal4"></span></p><br><br>
-
-        <label for="binario3">Digite um valor binario:</label>
-        <input type="text" id="binario3" name="binario3"><br><br>
-        <button
-            onclick="document.getElementById('hexadecimal3').textContent = binarioParaHexadecimal(document.getElementById('binario3').value)">Converter
-            para hexadecimal</button>
-        <p>O valor em hexadecimal é: <span id="hexadecimal3"></span></p><br><br>
-
-        <label for="hexadecimal4">Digite um valor hexadecimal</label>
-        <input type="text" id="hexadecimal4" name="hexadecimal4"><br><br>
-        <button
-            onclick="document.getElementById('binario4').textContent = hexadecimalParaBinario(document.getElementById('hexadecimal4').value)">Converter
-            para binario</button>
-        <p>O valor em binario é: <span id="binario4"></span></p><br><br>
+        <div class="row">
+            <label for="decimal">Digite um valor decimal:</label>
+            <input type="text" id="decimal" name="decimal">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="myModal" onclick="document.getElementById('binario').textContent = decimalParaBinario(document.getElementById('decimal').value)">Converter
+                para binário</button>
+                <p>O valor em binário é: <span id="binario"></span></p>
+        </div>
+        <div class="row col align-self-start">
+            <label for="binario2">Digite um valor binário:</label>
+            <input type="text" id="binario2" name="binario">
+            <button class="btn btn-success" onclick="document.getElementById('decimal2').textContent = binarioParaDecimal(document.getElementById('binario2').value)">Converter
+                para decimal</button>
+            <p>O valor em decimal é: <span id="decimal2"></span></p>
+        </div>
+        <div class="row col">
+            <label for="decimal3">Digite um valor decimal:</label>
+            <input type="text" id="decimal3" name="decimal3">
+            <button class="btn btn-success" onclick="document.getElementById('hexadecimal').textContent = decimalParaHexadecimal(document.getElementById('decimal3').value)">Converter
+                para hexadecimal</button>
+            <p>O valor em hexadecimal é: <span id="hexadecimal"></span></p>
+        </div>
+        <div class="row col">
+            <label for="hexadecimal2">Digite um valor hexadecimal:</label>
+            <input type="text" id="hexadecimal2" name="hexadecimal2">
+            <button class="btn btn-success" onclick="document.getElementById('decimal4').textContent = hexadecimalParaDecimal(document.getElementById('hexadecimal2').value)">Converter
+                para decimal</button>
+            <p>O valor em decimal é: <span id="decimal4"></span></p>
+        </div>
+        <div class="row col">
+            <label for="binario3">Digite um valor binário:</label>
+            <input type="text" id="binario3" name="binario3">
+            <button class="btn btn-success" onclick="document.getElementById('hexadecimal3').textContent = binarioParaHexadecimal(document.getElementById('binario3').value)">Converter
+                para hexadecimal</button>
+            <p>O valor em hexadecimal é: <span id="hexadecimal3"></span></p>
+        </div>
+        <div class="row col">
+            <label for="hexadecimal4">Digite um valor hexadecimal</label>
+            <input type="text" id="hexadecimal4" name="hexadecimal4">
+            <button class="btn btn-success" onclick="document.getElementById('binario4').textContent = hexadecimalParaBinario(document.getElementById('hexadecimal4').value)">Converter
+                para binario</button>
+            <p>O valor em binario é: <span id="binario4"></span></p>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
