--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="" />
-    
+
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -21,8 +21,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo if branco.png" width="" height="30" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -50,19 +49,15 @@
 
             As bases numéricas mais comuns são:
         </p>
-        <article class="accordion" id="accordionExample">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                            aria-expanded="false" aria-controls="collapseOne">
-                            Base 10 (Decimal)
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                    data-parent="#accordionExample">
-                    <div class="card-body text-justify">
+        <article class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Base 10 (Decimal)
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
                         É a base numérica que usamos diariamente. Ela utiliza 10 símbolos (0, 1, 2, 3, 4, 5, 6, 7, 8, 9)
                         para representar todos os números possíveis. É usada em operações matemáticas básicas, como
                         soma, subtração, multiplicação e divisão, além de ser amplamente utilizada em operações
@@ -70,17 +65,14 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                            data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Base 2 (Binária)
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body text-justify">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Base 2 (Binária)
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
                         É a base numérica usada em sistemas digitais, como computadores, smartphones e outros
                         dispositivos eletrônicos. Ela utiliza apenas dois símbolos (0 e 1) para representar números e é
                         fundamental para a programação de computadores. Os processadores de computador são construídos
@@ -88,17 +80,14 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                            data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Base 8 (Octal)
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                    <div class="card-body text-justify">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Base 8 (Octal)
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
                         É outra base numérica usada em sistemas eletrônicos, embora não seja tão comum quanto a base 2.
                         Ela utiliza 8 símbolos (0, 1, 2, 3, 4, 5, 6, 7) para representar números. É usada para
                         representar números binários de forma mais compacta e para simplificar a notação de endereços de
@@ -106,25 +95,19 @@
                     </div>
                 </div>
             </div>
-
-            <div class="card">
-                <div class="card-header" id="headingFour">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                            data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            Base 16 (Hexadecimal)
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                    <p class="card-body text-justify">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        Base 16 (Hexadecimal)
+                    </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
                         É uma base numérica amplamente utilizada em programação e eletrônica. Ela utiliza 16 símbolos
-                        (0, 1,
-                        2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F) para representar números. É usada para representar
-                        números
-                        binários de forma mais compacta e simplificar a notação de endereços de memória em programação.
+                        (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F) para representar números. É usada para representar
+                        números binários de forma mais compacta e simplificar a notação de endereços de memória em programação.
                         Também é usada para representar cores em sistemas gráficos, como RGB (Red, Green, Blue).
-                    </p>
+                    </div>
                 </div>
             </div>
         </article>
@@ -134,6 +117,10 @@
             <p class="text-center">&copy; Todos os direitos reservados</p>
         </div>
     </footer>
+
+    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
 
 </body>
 
